--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,2 @@
-TWITTER_CONSUMER_KEY=ここにCONSUMER_KEY
-TWITTER_CONSUMER_SECRET=ここにCONSUMER_SECRET
+TWITTER_API_KEY=ここにAPI_KEY
+TWITTER_API_SECRET=ここにAPI_SECRET
