--- a/test/fixtures/reviews.yml
+++ b/test/fixtures/reviews.yml
@@ -1,11 +1,38 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: reviews
+#
+#  id          :bigint           not null, primary key
+#  book_id     :integer
+#  review_type :integer
+#  content     :string(255)
+#  status      :integer
+#  user_id     :integer
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+kouch-reveiw1:
+  book: kouch-book1
+  review_type: 1
+  content: 自信家でかっこいい
+  status: 10
+
+kouch-reveiw2:
+  book: kouch-book1
+  review_type: 2
+  content: スペ語17点
+  status: 10
+
+dara-reveiw1:
+  book: dara-book1
+  review_type: 1
+  content: スピーチうまい
+  status: 10
+
+dara-reveiw2:
+  book: dara-book1
+  review_type: 2
+  content: 2cmでイっちゃった
+  status: 10
+
