--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,40 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: users
+#
+#  id                     :bigint           not null, primary key
+#  email                  :string(255)      default(""), not null
+#  encrypted_password     :string(255)      default(""), not null
+#  reset_password_token   :string(255)
+#  reset_password_sent_at :datetime
+#  remember_created_at    :datetime
+#  sign_in_count          :integer          default(0), not null
+#  current_sign_in_at     :datetime
+#  last_sign_in_at        :datetime
+#  current_sign_in_ip     :string(255)
+#  last_sign_in_ip        :string(255)
+#  created_at             :datetime         not null
+#  updated_at             :datetime         not null
+#  provider               :string(255)
+#  uid                    :string(255)
+#  name                   :string(255)
+#  nickname               :string(255)
+#  image                  :string(255)
+#
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+kouch:
+  email: 707335176808833024-twitter@example.com
+  provider: twitter
+  uid: 11
+  name: こーち2世
+  nickname: Iamkouch2
+  image: http://pbs.twimg.com/profile_images/1117644111891197952/8Mn7kvRE_normal.png
+
+
+dara:
+  email: 728079679152742401-twitter@example.com
+  provider: twitter
+  uid: 22
+  name: だーらJr
+  nickname: 3tdara2
+  image: http://pbs.twimg.com/profile_images/949657521425334273/Gict9ijg_normal.jpg
