--- a/config/database.yml
+++ b/config/database.yml
@@ -47,9 +47,8 @@ test:
 #
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
-#
 production:
   <<: *default
-  database: friends_review_production
-  username: friends_review
-  password: <%= ENV['FRIENDS_REVIEW_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
