--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3.7'
 services:
   app:
     build: .
+    stdin_open: true
+    tty: true
     image: friends_review
     command: bundle exec puma -C config/puma.rb
     ports:
