--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -20,8 +20,8 @@
 #  name                        :string(255)
 #  nickname                    :string(255)
 #  image                       :string(255)
-#  twitter_access_token        :string(255)
-#  twitter_access_token_secret :string(255)
+#  twitter_access_token        :binary(65535)
+#  twitter_access_token_secret :binary(65535)
 #
 
 yuri:
