--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,26 +2,26 @@
 #
 # Table name: users
 #
-#  id                          :bigint           not null, primary key
-#  email                       :string(255)      default(""), not null
-#  encrypted_password          :string(255)      default(""), not null
-#  reset_password_token        :string(255)
-#  reset_password_sent_at      :datetime
-#  remember_created_at         :datetime
-#  sign_in_count               :integer          default(0), not null
-#  current_sign_in_at          :datetime
-#  last_sign_in_at             :datetime
-#  current_sign_in_ip          :string(255)
-#  last_sign_in_ip             :string(255)
-#  created_at                  :datetime         not null
-#  updated_at                  :datetime         not null
-#  provider                    :string(255)
-#  uid                         :string(255)
-#  name                        :string(255)
-#  nickname                    :string(255)
-#  image                       :string(255)
-#  twitter_access_token        :binary(65535)
-#  twitter_access_token_secret :binary(65535)
+#  id                     :bigint           not null, primary key
+#  email                  :string(255)      default(""), not null
+#  encrypted_password     :string(255)      default(""), not null
+#  reset_password_token   :string(255)
+#  reset_password_sent_at :datetime
+#  remember_created_at    :datetime
+#  sign_in_count          :integer          default(0), not null
+#  current_sign_in_at     :datetime
+#  last_sign_in_at        :datetime
+#  current_sign_in_ip     :string(255)
+#  last_sign_in_ip        :string(255)
+#  created_at             :datetime         not null
+#  updated_at             :datetime         not null
+#  provider               :string(255)
+#  uid                    :string(255)
+#  name                   :string(255)
+#  nickname               :string(255)
+#  image                  :string(255)
+#  access_token           :binary(65535)
+#  access_token_secret    :binary(65535)
 #
 
 yuri:
