--- a/test/fixtures/replies.yml
+++ b/test/fixtures/replies.yml
@@ -11,10 +11,10 @@
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  review_id: 1
-  content: MyText
+# one:
+#   review_id: 1
+#   content: MyText
 
-two:
-  review_id: 1
-  content: MyText
+# two:
+#   review_id: 1
+#   content: MyText
