--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,8 @@ jobs:
   build:
     docker:
       - image: circleci/ruby:2.5.3-node-browsers
+        environment:
+           RAILS_ENV: test
       - image: circleci/mysql:5.6
 
 
