--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -39,4 +39,4 @@ dara:
   uid: 22
   name: だーらJr
   nickname: 3tdara2
-  image: http://pbs.twimg.com/profile_images/949657521425334273/Gict9ijg_normal.jpg
+  image: https://pbs.twimg.com/profile_images/949657521425334273/Gict9ijg_normal.jpg
