--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,10 @@ jobs:
         environment:
            RAILS_ENV: test
       - image: circleci/mysql:5.6
-
+        environment:
+          MYSQL_DATABASE: friends_review_test
+          MYSQL_ROOT_PASSWORD: password
+          ROW_FORMAT: DYNAMIC
 
     working_directory: ~/friends_review
 
