--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,8 @@ jobs:
     docker:
       - image: circleci/ruby:2.5.3-node-browsers
         environment:
-           RAILS_ENV: test
+          RAILS_ENV: test
+          MYSQL_HOST: 127.0.0.1
       - image: circleci/mysql:5.6
         environment:
           MYSQL_DATABASE: friends_review_test
